--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+# Ignore all .env files
 *.env
+
+# Ignore folders (must include trailing slash)
+Resources/
+documents/
+
+# Ignore specific files
+Test.ipynb
+text_chunks_and_embeddings_df.csv
+requirements.txt
