feat: add Command Line interface, requirements.txt and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@
 # Ignore folders (must include trailing slash)
 Resources/
 documents/
-
+venv/
 
 # Ignore specific files
 Test.ipynb
 text_chunks_and_embeddings_df.csv
-requirements.txt
