--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ text_chunks_and_embeddings_df.csv
 # Ignore folders created by the RAG Pipeline
 chroma_db_problm/
 rag_documents/
+
+
+#test files
+test.py
